[package]
name = "element"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.8", features = ["macros", "ws"] }
dotenvy = "0.15.7"
horrorshow = "0.8.4"
sea-orm = { version = "1.1.1", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-json", "with-uuid"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-axum = "0.1.2"
utoipa-scalar = { version = "0.2.0", features = ["axum"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
